{
    "name": "BaseController",
    "maps": [
        {
            "name": "Traversal",
            "id": "616fb399-228b-4e0b-a1fb-cae022ce5b4f",
            "actions": [
                {
                    "name": "WASD",
                    "type": "Button",
                    "id": "9add7e2c-afb6-4557-92cf-5c503013c67d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b1b87c42-fe83-419c-bf14-0ad55b8fbd03",
                    "path": "2DVector",
                    "interactions": "Hold(duration=0.01),Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "19152e5f-bcb4-4429-aed7-4d5d69b2b365",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d1ccf01f-5874-421c-91be-d0cd2bab99c7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e795a049-2330-4fb6-a8a7-d43fb61d45ef",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e44ffadb-44dd-4099-b374-f8f2c760adbd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "da509877-2d80-48d7-bf97-307420f6bb34",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "85155510-d0a4-459e-af78-826297e795d4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0f4012b9-18db-413f-bd3a-1a726aef912a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}